syntax = "proto3";

package user.v1;

option go_package = "zoom-api/gen/user/v1;userv1";

message CreateUserRequest {
  string auth0_id = 1;
  string name = 2;
  string email = 3;
  string zoom_token = 4;
  string zoom_refresh_token = 5;
}

message CreateUserResponse { int32 id = 1; }

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}